src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__cast_float64_to_int32__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Int32,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Int32,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: Some(
        CastInt32ToFloat64(
            CastInt32ToFloat64,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
